# ibdem

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  PROMPTS.md  README.ja.md  README.md  WORK_LOG.md  make_gif.py  paper_text.txt
.claude/: settings.local.json
src/: Bond.h  BondForce.cpp  BondForce.h  Simulation.cpp  Simulation.h  main.cpp
